--- a/css/skills.css
+++ b/css/skills.css
@@ -13,6 +13,7 @@
   white-space: nowrap;
   z-index: 99999;
   margin-bottom: 10rem;
+  position: relative;
 }
 
 .carrossel-conteudo {
@@ -27,6 +28,7 @@
   color: transparent;
   -webkit-text-stroke: 2px orange;
   margin-right: 50px;
+  
 }
 
 .skills-titulo-separador {
@@ -292,9 +294,6 @@ strong {
   color: #ff8c00;
 }
 
-.skills-linha {
-  display: none;
-}
 /* ============ RESPONSIVO PARA TELAS PEQUENAS (768px) ============ */
 
 @media (max-width: 768px) {
@@ -326,6 +325,11 @@ strong {
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
+  }
+
+  .skills-container h1{
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
   }
 
   .skills-descricao {
@@ -439,6 +443,7 @@ strong {
     min-width: 60px;
     max-width: 120px;
   }
+ 
 
   @media (hover: none) and (pointer: coarse) {
     .fechar-card {
@@ -487,7 +492,7 @@ strong {
     margin-bottom: 5rem;
     gap: 0.5rem;
     padding: 0.5rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     background: white;
   }
 
@@ -584,7 +589,7 @@ strong {
     }
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   * {
     animation: none !important;
     transition: none !important;
@@ -617,7 +622,7 @@ strong {
 
   .skills-container h1 {
     margin-bottom: 3rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 0.3rem;
   }
 
