--- a/css/sobremim.css
+++ b/css/sobremim.css
@@ -1,14 +1,13 @@
 /* Animação para a classe .divisao-sobre-mim */
 .divisao-sobre-mim {
-  opacity: 0; /* Inicia invisível */
-  transform: translateX(4%); /* Inicia fora da tela, à esquerda */
-  transition: opacity 2s ease-out, transform 2s ease-out; /* Transição suave */
-  margin-top: 52rem;
+  opacity: 0; 
+  transform: translateX(4%); 
+  transition: opacity 2s ease-out, transform 2s ease-out; 
 }
 
 .divisao-sobre-mim.visible {
   opacity: 1; 
-  transform: translateX(0); /* Move para a posição original */
+  transform: translateX(0); 
 }
 
 .divisao-sobre-mim h2 {
@@ -18,6 +17,7 @@
 
 .sobre-mim-titulo h2 {
   font-size: 3rem;
+  margin-top: 5rem;
 }
 
 .sobre-mim-descricao {
@@ -69,10 +69,11 @@
   width: 80%;
   justify-content: center;
   text-align: center;
+  margin-top: 3rem;
 }
 
 #sobre-mim-2 {
-  margin-top: 10rem;
+  margin-top: 2rem;
 }
 
 #sobre-mim-linkedin {
@@ -143,6 +144,10 @@
 }
 
 @media (max-width: 1024px) {
+  #sobre-mim-2{
+    margin-top: 0rem;
+  }
+  
   .sobre-mim-descricao {
     width: 60%;
     padding-left: 5rem;
@@ -197,13 +202,12 @@
   }
 
   #sobre-mim {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; */
     width: 100%;
-    
-    height: 25vh;
+  
   }
 
   .sobre-mim-container {
@@ -215,12 +219,11 @@
   .sobre-mim-titulo{
     font-size: 2rem;
  
-
   }
   .sobre-mim-titulo h2{
-    font-size: 2rem;
-    position: absolute;
-    top: -90%;
+    font-size: 1.8rem;
+    position: static;   
+     top: 1%;
   }
 
   .sobre-mim-descricao {
@@ -252,7 +255,22 @@
   }
 
 
-  @media (max-width: 340px) {
+  @media (max-width: 380px) {
+    #sobre-mim {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 100%;
+      /* height: 100vh; */
+      margin: 2rem 0 0;
+      padding: 0;
+    }
+
+    .sobre-mim-titulo h2{
+      font-size: 1.5rem;
+    }
+
     .linkedin-link,
     #download-cv {
       flex: 100%;
@@ -260,9 +278,14 @@
       margin: 0.5rem 0;
     }
 
+ #sobre-mim-linkedin{
+      margin: 0;
+      padding: 0;
+    }
+
     .sobre-mim-icone-linkedin {
       width: 24px !important;
-      margin-right: 0.5rem;
+      margin: 0rem;
     }
 
     .sobre-mim-download-cv {
