--- a/css/skills.css
+++ b/css/skills.css
@@ -22,13 +22,14 @@
 }
 
 .carrossel h2 {
-  font-size: 8rem;
+  font-size: 5rem;
   font-weight: bold;
   letter-spacing: 1rem;
   color: transparent;
   -webkit-text-stroke: 2px orange;
   margin-right: 50px;
-  
+  background: white;
+  padding: 3rem;
 }
 
 .skills-titulo-separador {
@@ -52,22 +53,28 @@ strong {
 /* ===============CONTAINER DOS CARDS SKILLS================ */
 .skills-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  margin-right: 17rem;
   gap: 2rem;
   padding: 2rem 0;
-  margin-top: 10rem;
+  margin-top: 1rem;
   position: relative;
 }
-.skills-container h1{
+
+.skills-container h1 {
   text-decoration: underline;
   text-underline-offset: 8px;
 }
 
 .skills-descricao {
-  width: 40%;
+  width: 100%;
+  position: relative;
+}
+
+.skills-descricao p {
   line-height: 1.5;
-  margin: 10rem 0 2rem 2rem;
-  padding: 5rem;
+  margin: 10rem 0 2rem 10rem;
+  padding: 3rem;
   border-radius: 24px;
   opacity: 0;
   transform: translateX(3%);
@@ -75,12 +82,29 @@ strong {
   background: linear-gradient(145deg, #f0f0f0, #ffffff);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   z-index: 2;
-  position: relative;
+  width: 30%;
 }
 
-.skills-descricao.visible {
+.skills-descricao p.visible {
   opacity: 1;
   transform: translateX(0);
+}
+
+.sobre-mim-download-cv {
+  text-decoration: none;
+  font-size: 0.8rem;
+  cursor: pointer;
+  transition: transform 1s ease;
+  position: absolute;
+  top: 45%;
+  left: 60%;
+  color: inherit;
+}
+
+.sobre-mim-download-cv:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  transform: scale(1.1);
 }
 
 /* ============ CARDS SKILLS NAO EXPANDIDO ============ */
@@ -97,7 +121,7 @@ strong {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: 5rem;
+  margin-top: 2rem;
   cursor: pointer;
   position: relative;
 }
@@ -150,15 +174,15 @@ strong {
   font-size: 1.5rem;
   color: #ff4d4d;
   cursor: pointer;
-  transition: opacity 0.3s ease; 
-  opacity: 0; 
+  transition: opacity 0.3s ease;
+  opacity: 0;
   z-index: 10;
 }
 
 .fechar-card:hover {
   transform: rotate(90deg);
-  color: #ff8c00; 
-  opacity: 1; 
+  color: #ff8c00;
+  opacity: 1;
 }
 
 /* ============ ABAS PROJETOS ============ */
@@ -189,8 +213,8 @@ strong {
 .abas-container {
   display: flex;
   flex-direction: column;
-  align-items: center; 
-  gap: 1rem; 
+  align-items: center;
+  gap: 1rem;
   padding: 2rem;
   position: absolute;
   z-index: 1;
@@ -218,9 +242,6 @@ strong {
   overflow: hidden;
 }
 
-
-
-
 .aba:hover {
   transform: scale(1.05) rotate(3deg);
 }
@@ -247,10 +268,9 @@ strong {
 
 /* Conteúdo EXPANDIDO */
 
-
 .aba.expandida {
-  width: 90%; 
-  max-width: 400px; 
+  width: 90%;
+  max-width: 400px;
   height: auto;
   transform: none;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
@@ -325,19 +345,36 @@ strong {
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
+    justify-content: center;
+    margin: 0;
   }
 
-  .skills-container h1{
+  .skills-container h1 {
     font-size: 1.5rem;
     margin-bottom: 3rem;
   }
 
-  .skills-descricao {
-    width: 70%;
+  .skills-descricao{
+    width: 100%;
     margin: 0 auto;
     padding: 2rem;
     font-size: 0.8rem;
     line-height: 1.2;
+  }
+
+  .skills-descricao p {
+    margin: 1rem 0 1rem 1rem; /* Margens ainda menores */
+    padding: 1.5rem; /* Padding reduzido */
+    width: 50%; /* Largura maior para ocupar mais espaço */
+    font-size: 0.8rem; /* Tamanho da fonte ajustado */
+    align-items: center;
+  }
+
+  .sobre-mim-download-cv {
+    top: 105%; /* Reposiciona o botão */
+    left: 52%; /* Centraliza horizontalmente */
+    transform: translateX(-50%); /* Ajuste fino para centralização */
+    font-size: 0.65rem; /* Tamanho da fonte reduzido */
   }
   .skills-card {
     height: 50px;
@@ -443,7 +480,6 @@ strong {
     min-width: 60px;
     max-width: 120px;
   }
- 
 
   @media (hover: none) and (pointer: coarse) {
     .fechar-card {
@@ -462,7 +498,9 @@ strong {
 
   #skills {
     padding: 0.5rem 0;
+  
   }
+
 
   .carrossel h2 {
     font-size: 2rem;
@@ -496,10 +534,19 @@ strong {
     background: white;
   }
 
-  .skills-descricao {
-    width: 60%;
-    padding: 1.5rem;
-    font-size: 0.7rem;
+  .skills-descricao p {
+    margin: 1rem 0 1rem 1rem; /* Margens ainda menores */
+    padding: 1.5rem; /* Padding reduzido */
+    width: 100%; /* Largura maior para ocupar mais espaço */
+    font-size: 0.8rem; /* Tamanho da fonte ajustado */
+    align-items: flex-start;
+  }
+
+  .sobre-mim-download-cv {
+    top: 15%; /* Reposiciona o botão */
+    left: 50%; /* Centraliza horizontalmente */
+    transform: translateX(-50%); /* Ajuste fino para centralização */
+    font-size: 0.65rem; /* Tamanho da fonte reduzido */
   }
 
   .skills-card {
